--- a/app.json
+++ b/app.json
@@ -19,9 +19,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/anImageThatDoesNotExist.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.ExpiryTracker"
     },
     "web": {
       "favicon": "./assets/favicon.png"
