--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-native-community/datetimepicker": "7.6.1",
     "expo": "~50.0.2",
     "expo-constants": "~15.4.5",
     "expo-status-bar": "~1.11.1",
+    "formik": "^2.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
