--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "apisauce": "^3.0.1",
     "expo": "~50.0.2",
     "expo-constants": "~15.4.5",
     "expo-status-bar": "~1.11.1",
@@ -19,6 +22,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "yup": "^1.3.3"
   },
