--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^3.1.1",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "apisauce": "^3.0.1",
-    "expo": "~50.0.2",
+    "expo": "^50.0.8",
     "expo-constants": "~15.4.5",
+    "expo-notifications": "~0.27.6",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.1.4",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.8.2",
