--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@unimodules/core": "^7.1.2",
     "apisauce": "^3.0.1",
-    "expo": "^50.0.8",
+    "expo": "^50.0.0",
     "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-notifications": "~0.27.6",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
